Fixed scrollbar flickering on load bug

--- a/source/static/cdn/small/css/onepage.css
+++ b/source/static/cdn/small/css/onepage.css
@@ -50,7 +50,6 @@ h2.top {
     overflow: auto;
     height: 100%;
     width: 100vw;
-    padding-right: -17px; 
 }
 
 .section-base {
